Add editing functionality

--- a/GroovyApi/appsettings.json
+++ b/GroovyApi/appsettings.json
@@ -9,5 +9,8 @@
   "StoredFilesPath": "Uploads",
   "ConnectionStrings": {
     "DefaultConnection": "Server=sql7.freesqldatabase.com;Port=3306;Database=sql7761052;User Id=sql7761052;Password=RQklv37hpR;CharSet=utf8mb4"
+  },
+  "YouTube": {
+    "ApiKey": "AIzaSyB7gUvF-zC7HzHGpf5RgHN-7w1c7bW_EiQ"
   }
 }
