--- a/GroovyApi/GroovyApi.csproj
+++ b/GroovyApi/GroovyApi.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Google.Apis.YouTube.v3" Version="1.69.0.3707" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.5.4" />
   </ItemGroup>
 
 </Project>
