--- a/GroovyApi/GroovyApi.csproj
+++ b/GroovyApi/GroovyApi.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="YoutubeExplode" Version="6.5.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Uploads\Trending\" />
+  </ItemGroup>
+
 </Project>
